web/style/transvision.css
/* ... */
.red {
    color: rgb(237, 56, 96);
}

.green {
    color: rgb(0, 200, 0);
}

.blue {
    color: rgb(0, 0, 200);
}

/* highlighting rules */

.highlight-specialchars {
    color: #000;
    white-space: pre-wrap; /* That allows exposing contiguous white spaces */
}

.highlight-specialchars .highlight-gray {
    background-color: rgba(0, 0, 0, 0.2);
}

.highlight-specialchars .highlight-space {
    background-color: rgba(0, 0, 0, 0.1);
    display: inline-block;
    height: 0.5em;
    vertical-align: middle;
}

.highlight-specialchars .highlight-red {
    background-color: rgba(255, 0, 0, 0.4);
}

.highlight {
    /* generic highlight */
    color: #000;
    background-color: rgba(255, 165, 0, 0.77);
    border-radius: 3px;
}

.superset {
    color: #808080;
    font-size: 80%;
}

/* Search form */

#searchform {
    max-width: 1014px;
    margin: 10px auto;
    text-align: center;
}

.smallscreen_notices {
    display: none;
}

.searchedTerm {
    font-style: italic;
    opacity: 0.8;
    font-variant: normal;
}

#root input[type='submit'] {
    margin-top: 0;
    min-width: 100px;
    vertical-align: middle;
}



.button,
input[type='submit'] {
    display: inline-block;
    border-radius: 6px;
    transition: all linear 0.25s;
    text-align: center;
    line-height: 1.1;
    margin-top: 33px;
    min-width: 80px;
    padding: 9px 30px;
    background: #00a0dc;
    color: #fff;
    font-size: 14px;
    border: none;
    cursor: pointer;
}

.button:hover,
.button:focus,
input[type='submit']:hover,
input[type='submit']:focus {
    text-decoration: none;
    background: #00abeb;
    color: #fff;
}

fieldset {
    border: none;
    display: inline-block;
    min-height: 3em;
    margin: 0.5em 0 0;
}


input[type=checkbox] {
    display: none;
}

input[type="checkbox"] + label:before {
    content: "";
    display: inline-block;
    cursor: pointer;
    width: 13px;
    height: 13px;
    border-radius: 2px;
    border: 1px solid #c1c1c1;
    margin-right: 7px;
    background-color: #f1f1f1;
    background-image: linear-gradient(#fff, rgba(255, 255, 255, 0.8));
    background-position: center center;
    background-repeat: no-repeat;
    box-shadow: 0 0px 1px 0 rgb(255, 255, 255), inset 0 1px 0 0 rgba(0, 0, 0, 0.03);
    vertical-align: middle;
}

input[type="checkbox"]:not(:disabled) + label:hover::before {
    border-color: #0095DD;
}

input[type="checkbox"]:checked + label:before {
    background-image: url("/img/check.svg#check"), linear-gradient(#fff, rgba(255, 255, 255, 0.8));
}

input[type="checkbox"]:disabled + label:before {
    opacity: 0.5;
}

.select-style {
    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='50px' height='50px'><polyline points='46.139,15.518 25.166,36.49 4.193,15.519'/></svg>");
    background-position: center right 10px;
    background-size: 16px 16px;
    background-repeat: no-repeat;
    background-color: #fff;
    border-color: #b2b2b2;
    border-radius: 3px;
    border-style: solid;
    border-width: 1px;
    min-width: 110px;
    box-shadow: 0 1px rgba(255, 255, 255, 0.5);
}

.select-style select {
    padding: 5px 30px 5px 8px;
    display: block;
    min-width: 110px;
    width: 100%;
    font-size: 1em;
    border: none;
    box-shadow: none;
    background-color: transparent;
    -webkit-appearance: none;
       -moz-appearance: none;
            appearance: none;
}

.select-style select:focus {
    outline: none;
}

#main_search select {
    display: block;
    width: 110px;
    font-size: 0.8em;
}

#main_search #search_type {
    display: block;
}

#main_search #search {
    margin: 0;
}

#main_search #search input[type='text'] {
    background: #fff;
    border-color: #b2b2b2;
    border-style: solid;
    border-width: 1px;
    font-size: 13px;
    padding: 10px 10px;
    border-radius: 3px;
    box-shadow: 0 1px rgba(255, 255, 255, 0.5);
    transition: all linear .1s;
    line-height: 1.1;
    width: calc(80% - 20px);
    padding-right: 20px;
    vertical-align: middle;
}


#main_search #search input[type='text']:focus {
    border-color: #42a4e0;
    box-shadow: 0 0 0 2px rgba(73, 173, 227, 0.4);
    transition: all linear .1s;
}

#main_search #searchcontext {
    font-size: 0.8em;
    margin-top: 2px;
    padding-left: 9px;
}

#main_search #searchcontext span {
    font-weight: bold;
}

#main_search fieldset {
    margin-bottom: 0.5em;
    vertical-align: top;
    min-height: 5em;
}

#main_search fieldset > label {
    font-family: 'Fira Sans Light', sans-serif;
    line-height: 1.9;
    font-weight: bold;
}

#main_search fieldset .mainsearch_default_checkbox {
    float: left;
    margin: 0.45em 0.3em 0 0;
}

#main_search fieldset .default_option {
    float: left;
    font-size: 0.75em;
    padding-top: 0.2em;
}

#main_search fieldset#locale_switch {
    margin: 10px 4px 0 4px;
    padding: 2.5em 0;
    min-height: 18px;
    min-width: 18px;
    cursor: pointer;
    background: url(/img/swap_icon_horiz_18x18.png) center no-repeat transparent;
}

#search_field_container {
    position: relative;
    display: inline;
}

#clear_search {
    position: absolute;
    top: 0;
    right: 0;
    width: 40px;
    height: 22px;
    background: url(/img/clear_icon_18x18.png) center no-repeat transparent;
}

#advanced_search {
    width: 250px;
    text-align: left;
}

#advanced_search span > label {
    font-size: 0.9em;
    font-family: 'Fira Sans Light', sans-serif;
}

#advanced_search span {
    white-space: nowrap;
    font-size: 1em;
    display: block;
    float: left;
    width: 115px;
}

#simplesearchform {
    display: block;
    margin: 10px auto;
    text-align: center;
}

#simplesearchform #locale_select {
    width: 80px;
}

#simplesearchform #product_select {
    width: 150px;
}

/* Autocomplete styles for suggestion popup */
.autocomplete-suggestions {
    border: 1px solid #999;
    background-color: #fff;
    overflow: auto;
}
/* ... */

